--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,8 +18,11 @@ jobs:
       with:
         go-version: 1.18
 
-    - name: Build
-      run: go build -v ./...
+    - name: Build Converter
+      run: go build -v ./main.go
+      
+    - name: Build Importer
+      run: go build -v ./importer.go
 
     - name: Test
       run: go test -v ./...
